mudando titulo do projeto pra anexo...

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Estudo sobre a Agropecuária no Brasil
+title: Anexo ao Estudo sobre a Agropecuária no Brasil
 author: Octahedron Data Experts
 logo: LOGO_IML_ODX.png
 
