--- a/_toc.yml
+++ b/_toc.yml
@@ -2,6 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 #
 - file: covers/intro
+- file: nbs/nb_chap1
 - file: nbs/nb_20-VAR
 - file: nbs/nb_30-COMEX
 - file: nbs/nb_40-emprego_formal_caged
