--- a/_toc.yml
+++ b/_toc.yml
@@ -3,6 +3,8 @@
 #
 - file: covers/intro
 - file: nbs/nb_chap1
+- file: nbs/nb_chap2
+- file: nbs/nb_chap3
 - file: nbs/nb_20-VAR
 - file: nbs/nb_30-COMEX
 - file: nbs/nb_40-emprego_formal_caged
