--- a/_toc.yml
+++ b/_toc.yml
@@ -5,6 +5,7 @@
 - file: nbs/nb_chap1
 - file: nbs/nb_chap3
 - file: nbs/nb_20-VAR
+- file: nbs/nb_cadeia_agronegócio
 - file: nbs/nb_30-COMEX
 - file: nbs/nb_40-emprego_formal_caged
 - file: nbs/nb_50-tratamento_produtividade
